catkin_ws/src/reach_flow/src/flowstar/modelParser.output
Terminals unused in grammar

    GEQ
    ASSIGN
    END
    MODE
    PARAAGGREG
    INTAGGREG
    TMAGGREG
    HYBRID
    QRPRECOND
    IDPRECOND
    MODES
    JUMPS
    INV
    GUARD
    RESET
    START
    MAXJMPS
    HYBRIDFLOW
    TAYLOR_PICARD
    TAYLOR_REMAINDER
    TAYLOR_POLYNOMIAL
    COMPUTATIONPATHS
    PAR
    UNC
    UNIVARIATE_POLYNOMIAL
    TIME_INV
    TIME_VAR
    STEP
    TRUE
    FALSE
    LINEARCONTINUOUSFLOW
    MATRIX


Grammar

    0 $accept: model $end

    1 model: CONTINUOUS '{' continuous '}' unsafe_setting
    2      | stateVarDecls plotting ORDER NUM CUTOFF NUM output_env unsafe_setting CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'
    3      | MULTIVARIATE_POLYNOMIAL '{' multivariate_polynomial '}'
    4      | EXPRESSION '{' expression '}'

    5 multivariate_polynomial: multivariate_polynomial '+' multivariate_polynomial
    6                        | multivariate_polynomial '-' multivariate_polynomial
    7                        | '(' multivariate_polynomial ')'
    8                        | multivariate_polynomial '*' multivariate_polynomial
    9                        | multivariate_polynomial '^' NUM
   10                        | '-' multivariate_polynomial
   11                        | IDENT
   12                        | '[' NUM ',' NUM ']'
   13                        | NUM

   14 univariate_polynomial: univariate_polynomial '+' univariate_polynomial
   15                      | univariate_polynomial '-' univariate_polynomial
   16                      | '(' univariate_polynomial ')'
   17                      | univariate_polynomial '*' univariate_polynomial
   18                      | univariate_polynomial '^' NUM
   19                      | '-' univariate_polynomial
   20                      | IDENT
   21                      | NUM

   22 expression: expression '+' expression
   23           | expression '-' expression
   24           | '(' expression ')'
   25           | expression '*' expression
   26           | expression '^' NUM
   27           | '-' expression
   28           | IDENT
   29           | '[' NUM ',' NUM ']'
   30           | NUM
   31           | expression '/' expression
   32           | EXP '(' expression ')'
   33           | SIN '(' expression ')'
   34           | COS '(' expression ')'
   35           | LOG '(' expression ')'
   36           | SQRT '(' expression ')'

   37 continuous: stateVarDecls SETTING '{' setting '}' ODE '{' ode '}' INIT '{' init '}'
   38           | stateVarDecls SETTING '{' setting '}' ODE '{' NUM '}' '{' ode '}' INIT '{' init '}'
   39           | stateVarDecls SETTING '{' setting '}' LTIODE '{' lti_ode '}' INIT '{' init '}'
   40           | stateVarDecls SETTING '{' setting '}' LTVODE '{' ltv_ode '}' INIT '{' init '}'
   41           | stateVarDecls SETTING '{' setting '}' LTVODE '{' tv_par_list '}' '{' NUM '}' '{' ltv_ode '}' INIT '{' init '}'

   42 stateVarDecls: STATEVAR stateIdDeclList

   43 stateIdDeclList: stateIdDeclList ',' IDENT
   44                | IDENT

   45 setting: FIXEDST NUM TIME NUM remainder_estimation plotting FIXEDORD NUM CUTOFF NUM PRECISION NUM output_env printing
   46        | FIXEDST NUM TIME NUM remainder_estimation plotting ADAPTIVEORD '{' MIN NUM ',' MAX NUM '}' CUTOFF NUM PRECISION NUM output_env printing
   47        | ADAPTIVEST '{' MIN NUM ',' MAX NUM '}' TIME NUM remainder_estimation plotting FIXEDORD NUM CUTOFF NUM PRECISION NUM output_env printing

   48 remainder_estimation: REMEST NUM
   49                     | REMEST '{' remainders '}'

   50 remainders: remainders ',' IDENT ':' '[' NUM ',' NUM ']'
   51           | IDENT ':' '[' NUM ',' NUM ']'

   52 plotting: GNUPLOT INTERVAL IDENT ',' IDENT
   53         | GNUPLOT OCTAGON IDENT ',' IDENT
   54         | GNUPLOT GRID NUM IDENT ',' IDENT
   55         | MATLAB INTERVAL IDENT ',' IDENT
   56         | MATLAB OCTAGON IDENT ',' IDENT
   57         | MATLAB GRID NUM IDENT ',' IDENT

   58 output_env: OUTPUT IDENT
   59           | PLOT OUTPUT IDENT
   60           | TM OUTPUT IDENT
   61           | NOOUTPUT

   62 printing: PRINTON
   63         | PRINTOFF

   64 ode: ode IDENT '\'' EQ expression
   65    | %empty

   66 init: set_of_interval_vectors
   67     | interval_vector

   68 interval_vector: interval_vector IDENT BELONGSTO '[' NUM ',' NUM ']'
   69                | %empty

   70 set_of_interval_vectors: set_of_interval_vectors '{' interval_vector '}'
   71                        | '{' interval_vector '}'

   72 unsafe_setting: UNSAFESET '{' constraints '}'
   73               | %empty

   74 constraints: constraints expression LEQ NUM
   75            | %empty

   76 tmVarDecls: TMVAR tmIdDeclList

   77 tmIdDeclList: tmIdDeclList ',' IDENT
   78             | IDENT

   79 continuous_flowpipes: continuous_flowpipes '{' vector_of_Taylor_models domain_setting '}'
   80                     | '{' vector_of_Taylor_models domain_setting '}'

   81 vector_of_Taylor_models: vector_of_Taylor_models IDENT EQ Taylor_model_polynomial '+' '[' NUM ',' NUM ']'
   82                        | %empty

   83 domain_setting: domain_setting IDENT BELONGSTO '[' NUM ',' NUM ']'
   84               | IDENT BELONGSTO '[' NUM ',' NUM ']'

   85 Taylor_model_polynomial: Taylor_model_polynomial '+' Taylor_model_polynomial
   86                        | Taylor_model_polynomial '-' Taylor_model_polynomial
   87                        | '(' Taylor_model_polynomial ')'
   88                        | Taylor_model_polynomial '*' Taylor_model_polynomial
   89                        | Taylor_model_polynomial '^' NUM
   90                        | '-' Taylor_model_polynomial
   91                        | IDENT
   92                        | NUM

   93 lti_ode: lti_ode IDENT '\'' EQ lti_polynomial
   94        | %empty

   95 lti_polynomial: lti_polynomial '+' lti_term
   96               | lti_polynomial '-' lti_term
   97               | '-' lti_term
   98               | lti_term

   99 lti_term: NUM '*' IDENT
  100         | IDENT
  101         | '[' NUM ',' NUM ']'
  102         | NUM

  103 tv_par_list: tv_par_list ',' IDENT
  104            | IDENT

  105 ltv_ode: ltv_ode IDENT '\'' EQ ltv_polynomial
  106        | IDENT '\'' EQ ltv_polynomial

  107 ltv_polynomial: ltv_polynomial '+' ltv_term
  108               | ltv_polynomial '-' ltv_term
  109               | '-' ltv_term
  110               | ltv_term

  111 ltv_term: '(' univariate_polynomial ')' '*' IDENT
  112         | IDENT
  113         | '(' univariate_polynomial ')'


Terminals, with rules where they appear

    $end (0) 0
    '\'' (39) 64 93 105 106
    '(' (40) 7 16 24 32 33 34 35 36 87 111 113
    ')' (41) 7 16 24 32 33 34 35 36 87 111 113
    '*' (42) 8 17 25 88 99 111
    '+' (43) 5 14 22 81 85 95 107
    ',' (44) 12 29 43 46 47 50 51 52 53 54 55 56 57 68 77 81 83 84 101 103
    '-' (45) 6 10 15 19 23 27 86 90 96 97 108 109
    '/' (47) 31
    ':' (58) 50 51
    '[' (91) 12 29 50 51 68 81 83 84 101
    ']' (93) 12 29 50 51 68 81 83 84 101
    '^' (94) 9 18 26 89
    '{' (123) 1 2 3 4 37 38 39 40 41 46 47 49 70 71 72 79 80
    '}' (125) 1 2 3 4 37 38 39 40 41 46 47 49 70 71 72 79 80
    error (256)
    NUM <dblVal> (258) 2 9 12 13 18 21 26 29 30 38 41 45 46 47 48 50 51 54 57 68 74 81 83 84 89 92 99 101 102
    IDENT <identifier> (259) 11 20 28 43 44 50 51 52 53 54 55 56 57 58 59 60 64 68 77 78 81 83 84 91 93 99 100 103 104 105 106 111 112
    STATEVAR (260) 42
    TMVAR (261) 76
    TM (262) 60
    EQ (263) 64 81 93 105 106
    GEQ (264)
    LEQ (265) 74
    ASSIGN (266)
    END (267)
    MODE (268)
    INIT (269) 37 38 39 40 41
    BELONGSTO (270) 68 83 84
    PARAAGGREG (271)
    INTAGGREG (272)
    TMAGGREG (273)
    OUTPUT (274) 58 59 60
    NOOUTPUT (275) 61
    CONTINUOUS (276) 1
    HYBRID (277)
    SETTING (278) 37 38 39 40 41
    FIXEDST (279) 45 46
    FIXEDORD (280) 45 47
    ADAPTIVEST (281) 47
    ADAPTIVEORD (282) 46
    ORDER (283) 2
    MIN (284) 46 47
    MAX (285) 46 47
    REMEST (286) 48 49
    INTERVAL (287) 52 55
    OCTAGON (288) 53 56
    GRID (289) 54 57
    PLOT (290) 59
    QRPRECOND (291)
    IDPRECOND (292)
    TIME (293) 45 46 47
    MODES (294)
    JUMPS (295)
    INV (296)
    GUARD (297)
    RESET (298)
    START (299)
    MAXJMPS (300)
    PRINTON (301) 62
    PRINTOFF (302) 63
    UNSAFESET (303) 72
    CONTINUOUSFLOW (304) 2
    HYBRIDFLOW (305)
    TAYLOR_PICARD (306)
    TAYLOR_REMAINDER (307)
    TAYLOR_POLYNOMIAL (308)
    EXP (309) 32
    SIN (310) 33
    COS (311) 34
    LOG (312) 35
    SQRT (313) 36
    ODE (314) 37 38
    CUTOFF (315) 2 45 46 47
    PRECISION (316) 45 46 47
    GNUPLOT (317) 52 53 54
    MATLAB (318) 55 56 57
    COMPUTATIONPATHS (319)
    LTIODE (320) 39
    LTVODE (321) 40 41
    PAR (322)
    UNC (323)
    UNIVARIATE_POLYNOMIAL (324)
    MULTIVARIATE_POLYNOMIAL (325) 3
    TIME_INV (326)
    TIME_VAR (327)
    STEP (328)
    TRUE (329)
    FALSE (330)
    LINEARCONTINUOUSFLOW (331)
    EXPRESSION (332) 4
    MATRIX (333)
    uminus (334)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    model (95)
        on left: 1 2 3 4
        on right: 0
    multivariate_polynomial <intPoly> (96)
        on left: 5 6 7 8 9 10 11 12 13
        on right: 3 5 6 7 8 9 10
    univariate_polynomial <uniPoly> (97)
        on left: 14 15 16 17 18 19 20 21
        on right: 14 15 16 17 18 19 111 113
    expression <pIntExpression> (98)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 4 22 23 24 25 26 27 31 32 33 34 35 36 64 74
    continuous (99)
        on left: 37 38 39 40 41
        on right: 1
    stateVarDecls (100)
        on left: 42
        on right: 2 37 38 39 40 41
    stateIdDeclList (101)
        on left: 43 44
        on right: 42 43
    setting (102)
        on left: 45 46 47
        on right: 37 38 39 40 41
    remainder_estimation (103)
        on left: 48 49
        on right: 45 46 47
    remainders <intVec> (104)
        on left: 50 51
        on right: 49 50
    plotting (105)
        on left: 52 53 54 55 56 57
        on right: 2 45 46 47
    output_env (106)
        on left: 58 59 60 61
        on right: 2 45 46 47
    printing (107)
        on left: 62 63
        on right: 45 46 47
    ode <intExpressionVec> (108)
        on left: 64 65
        on right: 37 38 64
    init <flowpipeVec> (109)
        on left: 66 67
        on right: 37 38 39 40 41
    interval_vector <intVec> (110)
        on left: 68 69
        on right: 67 68 70 71
    set_of_interval_vectors <intsVec> (111)
        on left: 70 71
        on right: 66 70
    unsafe_setting (112)
        on left: 72 73
        on right: 1 2
    constraints <constraintVec> (113)
        on left: 74 75
        on right: 72 74
    tmVarDecls (114)
        on left: 76
        on right: 2
    tmIdDeclList (115)
        on left: 77 78
        on right: 76 77
    continuous_flowpipes (116)
        on left: 79 80
        on right: 2 79
    vector_of_Taylor_models <taylorModelVec> (117)
        on left: 81 82
        on right: 79 80 81
    domain_setting <intVec> (118)
        on left: 83 84
        on right: 79 80 83
    Taylor_model_polynomial <realPoly> (119)
        on left: 85 86 87 88 89 90 91 92
        on right: 81 85 86 87 88 89 90
    lti_ode <pLTIDescription> (120)
        on left: 93 94
        on right: 39 93
    lti_polynomial <intVec> (121)
        on left: 95 96 97 98
        on right: 93 95 96
    lti_term <pLTITerm> (122)
        on left: 99 100 101 102
        on right: 95 96 97 98
    tv_par_list (123)
        on left: 103 104
        on right: 41 103
    ltv_ode <pLTVDescription> (124)
        on left: 105 106
        on right: 40 41 105
    ltv_polynomial <uniPolyVec> (125)
        on left: 107 108 109 110
        on right: 105 106 107 108
    ltv_term <pLTVTerm> (126)
        on left: 111 112 113
        on right: 107 108 109 110


State 0

    0 $accept: . model $end

    STATEVAR                 shift, and go to state 1
    CONTINUOUS               shift, and go to state 2
    MULTIVARIATE_POLYNOMIAL  shift, and go to state 3
    EXPRESSION               shift, and go to state 4

    model          go to state 5
    stateVarDecls  go to state 6


State 1

   42 stateVarDecls: STATEVAR . stateIdDeclList

    IDENT  shift, and go to state 7

    stateIdDeclList  go to state 8


State 2

    1 model: CONTINUOUS . '{' continuous '}' unsafe_setting

    '{'  shift, and go to state 9


State 3

    3 model: MULTIVARIATE_POLYNOMIAL . '{' multivariate_polynomial '}'

    '{'  shift, and go to state 10


State 4

    4 model: EXPRESSION . '{' expression '}'

    '{'  shift, and go to state 11


State 5

    0 $accept: model . $end

    $end  shift, and go to state 12


State 6

    2 model: stateVarDecls . plotting ORDER NUM CUTOFF NUM output_env unsafe_setting CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'

    GNUPLOT  shift, and go to state 13
    MATLAB   shift, and go to state 14

    plotting  go to state 15


State 7

   44 stateIdDeclList: IDENT .

    $default  reduce using rule 44 (stateIdDeclList)


State 8

   42 stateVarDecls: STATEVAR stateIdDeclList .
   43 stateIdDeclList: stateIdDeclList . ',' IDENT

    ','  shift, and go to state 16

    $default  reduce using rule 42 (stateVarDecls)


State 9

    1 model: CONTINUOUS '{' . continuous '}' unsafe_setting

    STATEVAR  shift, and go to state 1

    continuous     go to state 17
    stateVarDecls  go to state 18


State 10

    3 model: MULTIVARIATE_POLYNOMIAL '{' . multivariate_polynomial '}'

    NUM    shift, and go to state 19
    IDENT  shift, and go to state 20
    '-'    shift, and go to state 21
    '('    shift, and go to state 22
    '['    shift, and go to state 23

    multivariate_polynomial  go to state 24


State 11

    4 model: EXPRESSION '{' . expression '}'

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 35


State 12

    0 $accept: model $end .

    $default  accept


State 13

   52 plotting: GNUPLOT . INTERVAL IDENT ',' IDENT
   53         | GNUPLOT . OCTAGON IDENT ',' IDENT
   54         | GNUPLOT . GRID NUM IDENT ',' IDENT

    INTERVAL  shift, and go to state 36
    OCTAGON   shift, and go to state 37
    GRID      shift, and go to state 38


State 14

   55 plotting: MATLAB . INTERVAL IDENT ',' IDENT
   56         | MATLAB . OCTAGON IDENT ',' IDENT
   57         | MATLAB . GRID NUM IDENT ',' IDENT

    INTERVAL  shift, and go to state 39
    OCTAGON   shift, and go to state 40
    GRID      shift, and go to state 41


State 15

    2 model: stateVarDecls plotting . ORDER NUM CUTOFF NUM output_env unsafe_setting CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'

    ORDER  shift, and go to state 42


State 16

   43 stateIdDeclList: stateIdDeclList ',' . IDENT

    IDENT  shift, and go to state 43


State 17

    1 model: CONTINUOUS '{' continuous . '}' unsafe_setting

    '}'  shift, and go to state 44


State 18

   37 continuous: stateVarDecls . SETTING '{' setting '}' ODE '{' ode '}' INIT '{' init '}'
   38           | stateVarDecls . SETTING '{' setting '}' ODE '{' NUM '}' '{' ode '}' INIT '{' init '}'
   39           | stateVarDecls . SETTING '{' setting '}' LTIODE '{' lti_ode '}' INIT '{' init '}'
   40           | stateVarDecls . SETTING '{' setting '}' LTVODE '{' ltv_ode '}' INIT '{' init '}'
   41           | stateVarDecls . SETTING '{' setting '}' LTVODE '{' tv_par_list '}' '{' NUM '}' '{' ltv_ode '}' INIT '{' init '}'

    SETTING  shift, and go to state 45


State 19

   13 multivariate_polynomial: NUM .

    $default  reduce using rule 13 (multivariate_polynomial)


State 20

   11 multivariate_polynomial: IDENT .

    $default  reduce using rule 11 (multivariate_polynomial)


State 21

   10 multivariate_polynomial: '-' . multivariate_polynomial

    NUM    shift, and go to state 19
    IDENT  shift, and go to state 20
    '-'    shift, and go to state 21
    '('    shift, and go to state 22
    '['    shift, and go to state 23

    multivariate_polynomial  go to state 46


State 22

    7 multivariate_polynomial: '(' . multivariate_polynomial ')'

    NUM    shift, and go to state 19
    IDENT  shift, and go to state 20
    '-'    shift, and go to state 21
    '('    shift, and go to state 22
    '['    shift, and go to state 23

    multivariate_polynomial  go to state 47


State 23

   12 multivariate_polynomial: '[' . NUM ',' NUM ']'

    NUM  shift, and go to state 48


State 24

    3 model: MULTIVARIATE_POLYNOMIAL '{' multivariate_polynomial . '}'
    5 multivariate_polynomial: multivariate_polynomial . '+' multivariate_polynomial
    6                        | multivariate_polynomial . '-' multivariate_polynomial
    8                        | multivariate_polynomial . '*' multivariate_polynomial
    9                        | multivariate_polynomial . '^' NUM

    '+'  shift, and go to state 49
    '-'  shift, and go to state 50
    '*'  shift, and go to state 51
    '^'  shift, and go to state 52
    '}'  shift, and go to state 53


State 25

   30 expression: NUM .

    $default  reduce using rule 30 (expression)


State 26

   28 expression: IDENT .

    $default  reduce using rule 28 (expression)


State 27

   32 expression: EXP . '(' expression ')'

    '('  shift, and go to state 54


State 28

   33 expression: SIN . '(' expression ')'

    '('  shift, and go to state 55


State 29

   34 expression: COS . '(' expression ')'

    '('  shift, and go to state 56


State 30

   35 expression: LOG . '(' expression ')'

    '('  shift, and go to state 57


State 31

   36 expression: SQRT . '(' expression ')'

    '('  shift, and go to state 58


State 32

   27 expression: '-' . expression

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 59


State 33

   24 expression: '(' . expression ')'

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 60


State 34

   29 expression: '[' . NUM ',' NUM ']'

    NUM  shift, and go to state 61


State 35

    4 model: EXPRESSION '{' expression . '}'
   22 expression: expression . '+' expression
   23           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '^' NUM
   31           | expression . '/' expression

    '+'  shift, and go to state 62
    '-'  shift, and go to state 63
    '*'  shift, and go to state 64
    '/'  shift, and go to state 65
    '^'  shift, and go to state 66
    '}'  shift, and go to state 67


State 36

   52 plotting: GNUPLOT INTERVAL . IDENT ',' IDENT

    IDENT  shift, and go to state 68


State 37

   53 plotting: GNUPLOT OCTAGON . IDENT ',' IDENT

    IDENT  shift, and go to state 69


State 38

   54 plotting: GNUPLOT GRID . NUM IDENT ',' IDENT

    NUM  shift, and go to state 70


State 39

   55 plotting: MATLAB INTERVAL . IDENT ',' IDENT

    IDENT  shift, and go to state 71


State 40

   56 plotting: MATLAB OCTAGON . IDENT ',' IDENT

    IDENT  shift, and go to state 72


State 41

   57 plotting: MATLAB GRID . NUM IDENT ',' IDENT

    NUM  shift, and go to state 73


State 42

    2 model: stateVarDecls plotting ORDER . NUM CUTOFF NUM output_env unsafe_setting CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'

    NUM  shift, and go to state 74


State 43

   43 stateIdDeclList: stateIdDeclList ',' IDENT .

    $default  reduce using rule 43 (stateIdDeclList)


State 44

    1 model: CONTINUOUS '{' continuous '}' . unsafe_setting

    UNSAFESET  shift, and go to state 75

    $default  reduce using rule 73 (unsafe_setting)

    unsafe_setting  go to state 76


State 45

   37 continuous: stateVarDecls SETTING . '{' setting '}' ODE '{' ode '}' INIT '{' init '}'
   38           | stateVarDecls SETTING . '{' setting '}' ODE '{' NUM '}' '{' ode '}' INIT '{' init '}'
   39           | stateVarDecls SETTING . '{' setting '}' LTIODE '{' lti_ode '}' INIT '{' init '}'
   40           | stateVarDecls SETTING . '{' setting '}' LTVODE '{' ltv_ode '}' INIT '{' init '}'
   41           | stateVarDecls SETTING . '{' setting '}' LTVODE '{' tv_par_list '}' '{' NUM '}' '{' ltv_ode '}' INIT '{' init '}'

    '{'  shift, and go to state 77


State 46

    5 multivariate_polynomial: multivariate_polynomial . '+' multivariate_polynomial
    6                        | multivariate_polynomial . '-' multivariate_polynomial
    8                        | multivariate_polynomial . '*' multivariate_polynomial
    9                        | multivariate_polynomial . '^' NUM
   10                        | '-' multivariate_polynomial .

    '^'  shift, and go to state 52

    $default  reduce using rule 10 (multivariate_polynomial)


State 47

    5 multivariate_polynomial: multivariate_polynomial . '+' multivariate_polynomial
    6                        | multivariate_polynomial . '-' multivariate_polynomial
    7                        | '(' multivariate_polynomial . ')'
    8                        | multivariate_polynomial . '*' multivariate_polynomial
    9                        | multivariate_polynomial . '^' NUM

    '+'  shift, and go to state 49
    '-'  shift, and go to state 50
    '*'  shift, and go to state 51
    '^'  shift, and go to state 52
    ')'  shift, and go to state 78


State 48

   12 multivariate_polynomial: '[' NUM . ',' NUM ']'

    ','  shift, and go to state 79


State 49

    5 multivariate_polynomial: multivariate_polynomial '+' . multivariate_polynomial

    NUM    shift, and go to state 19
    IDENT  shift, and go to state 20
    '-'    shift, and go to state 21
    '('    shift, and go to state 22
    '['    shift, and go to state 23

    multivariate_polynomial  go to state 80


State 50

    6 multivariate_polynomial: multivariate_polynomial '-' . multivariate_polynomial

    NUM    shift, and go to state 19
    IDENT  shift, and go to state 20
    '-'    shift, and go to state 21
    '('    shift, and go to state 22
    '['    shift, and go to state 23

    multivariate_polynomial  go to state 81


State 51

    8 multivariate_polynomial: multivariate_polynomial '*' . multivariate_polynomial

    NUM    shift, and go to state 19
    IDENT  shift, and go to state 20
    '-'    shift, and go to state 21
    '('    shift, and go to state 22
    '['    shift, and go to state 23

    multivariate_polynomial  go to state 82


State 52

    9 multivariate_polynomial: multivariate_polynomial '^' . NUM

    NUM  shift, and go to state 83


State 53

    3 model: MULTIVARIATE_POLYNOMIAL '{' multivariate_polynomial '}' .

    $default  reduce using rule 3 (model)


State 54

   32 expression: EXP '(' . expression ')'

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 84


State 55

   33 expression: SIN '(' . expression ')'

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 85


State 56

   34 expression: COS '(' . expression ')'

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 86


State 57

   35 expression: LOG '(' . expression ')'

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 87


State 58

   36 expression: SQRT '(' . expression ')'

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 88


State 59

   22 expression: expression . '+' expression
   23           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '^' NUM
   27           | '-' expression .
   31           | expression . '/' expression

    '^'  shift, and go to state 66

    $default  reduce using rule 27 (expression)


State 60

   22 expression: expression . '+' expression
   23           | expression . '-' expression
   24           | '(' expression . ')'
   25           | expression . '*' expression
   26           | expression . '^' NUM
   31           | expression . '/' expression

    '+'  shift, and go to state 62
    '-'  shift, and go to state 63
    '*'  shift, and go to state 64
    '/'  shift, and go to state 65
    '^'  shift, and go to state 66
    ')'  shift, and go to state 89


State 61

   29 expression: '[' NUM . ',' NUM ']'

    ','  shift, and go to state 90


State 62

   22 expression: expression '+' . expression

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 91


State 63

   23 expression: expression '-' . expression

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 92


State 64

   25 expression: expression '*' . expression

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 93


State 65

   31 expression: expression '/' . expression

    NUM    shift, and go to state 25
    IDENT  shift, and go to state 26
    EXP    shift, and go to state 27
    SIN    shift, and go to state 28
    COS    shift, and go to state 29
    LOG    shift, and go to state 30
    SQRT   shift, and go to state 31
    '-'    shift, and go to state 32
    '('    shift, and go to state 33
    '['    shift, and go to state 34

    expression  go to state 94


State 66

   26 expression: expression '^' . NUM

    NUM  shift, and go to state 95


State 67

    4 model: EXPRESSION '{' expression '}' .

    $default  reduce using rule 4 (model)


State 68

   52 plotting: GNUPLOT INTERVAL IDENT . ',' IDENT

    ','  shift, and go to state 96


State 69

   53 plotting: GNUPLOT OCTAGON IDENT . ',' IDENT

    ','  shift, and go to state 97


State 70

   54 plotting: GNUPLOT GRID NUM . IDENT ',' IDENT

    IDENT  shift, and go to state 98


State 71

   55 plotting: MATLAB INTERVAL IDENT . ',' IDENT

    ','  shift, and go to state 99


State 72

   56 plotting: MATLAB OCTAGON IDENT . ',' IDENT

    ','  shift, and go to state 100


State 73

   57 plotting: MATLAB GRID NUM . IDENT ',' IDENT

    IDENT  shift, and go to state 101


State 74

    2 model: stateVarDecls plotting ORDER NUM . CUTOFF NUM output_env unsafe_setting CONTINUOUSFLOW '{' tmVarDecls continuous_flowpipes '}'

    CUTOFF  shift, and go to state 102


State 75

   72 unsafe_setting: UNSAFESET . '{' constraints '}'

    '{'  shift, and go to state 103


State 76

    1 model: CONTINUOUS '{' continuous '}' unsafe_setting .

    $default  reduce using rule 1 (model)


State 77

   37 continuous: stateVarDecls SETTING '{' . setting '}' ODE '{' ode '}' INIT '{' init '}'
   38           | stateVarDecls SETTING '{' . setting '}' ODE '{' NUM '}' '{' ode '}' INIT '{' init '}'
   39           | stateVarDecls SETTING '{' . setting '}' LTIODE '{' lti_ode '}' INIT '{' init '}'
   40           | stateVarDecls SETTING '{' . setting '}' LTVODE '{' ltv_ode '}' INIT '{' init '}'
   41           | stateVarDecls SETTING '{' . setting '}' LTVODE '{' tv_par_list '}' '{' NUM '}' '{' ltv_ode '}' INIT '{' init '}'

    FIXEDST     shift, and go to state 104
    ADAPTIVEST  shift, and go to state 105

    setting  go to state 106


State 78

    7 multivariate_polynomial: '(' multivariate_polynomial ')' .

    $default  reduce using rule 7 (multivariate_polynomial)


State 79

   12 multivariate_polynomial: '[' NUM ',' . NUM ']'

    NUM  shift, and go to state 107


State 80

    5 multivariate_polynomial: multivariate_polynomial . '+' multivariate_polynomial
    5                        | multivariate_polynomial '+' multivariate_polynomial .
    6                        | multivariate_polynomial . '-' multivariate_polynomial
    8                        | multivariate_polynomial . '*' multivariate_polynomial
    9                        | multivariate_polynomial . '^' NUM

    '*'  shift, and go to state 51
    '^'  shift, and go to state 52

    $default  reduce using rule 5 (multivariate_polynomial)


State 81

    5 multivariate_polynomial: multivariate_polynomial . '+' multivariate_polynomial
    6                        | multivariate_polynomial . '-' multivariate_polynomial
    6                        | multivariate_polynomial '-' multivariate_polynomial .
    8                        | multivariate_polynomial . '*' multivariate_polynomial
    9                        | multivariate_polynomial . '^' NUM

    '*'  shift, and go to state 51
    '^'  shift, and go to state 52

    $default  reduce using rule 6 (multivariate_polynomial)


State 82

    5 multivariate_polynomial: multivariate_polynomial . '+' multivariate_polynomial
    6                        | multivariate_polynomial . '-' multivariate_polynomial
    8                        | multivariate_polynomial . '*' multivariate_polynomial
    8                        | multivariate_polynomial '*' multivariate_polynomial .
    9                        | multivariate_polynomial . '^' NUM

    '^'  shift, and go to state 52

    $default  reduce using rule 8 (multivariate_polynomial)


State 83

    9 multivariate_polynomial: multivariate_polynomial '^' NUM .

    $default  reduce using rule 9 (multivariate_polynomial)


State 84

   22 expression: expression . '+' expression
   23           | expression . '-' expression
   25           | expression . '*' expression
   26           | expression . '^' NUM
   31           | expression . '/' expression
   32           | EXP '(' expression . ')'
